<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient_background_login">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_izq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_dcha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:id="@+id/etMyPetsLife"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"

        android:text="@string/app_name"
        android:textColor="@color/white"

        android:textSize="50dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_dcha"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/guideline_izq"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_background"
        android:hint="@string/email"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"

        app:layout_constraintEnd_toStartOf="@id/guideline_dcha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_izq"
        app:layout_constraintTop_toBottomOf="@+id/etMyPetsLife" />

    <EditText
        android:id="@+id/etPassword"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:background="@drawable/et_background"
        android:hint="@string/password"
        android:padding="16dp"
        android:drawableRight="@drawable/ic_eye"
        android:textColorHint="@color/login_form_details"

        app:layout_constraintEnd_toStartOf="@id/guideline_dcha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_izq"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:background="@drawable/btn_background_login"
        android:textColor="@color/login_form_details_medium"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_dcha"
        app:layout_constraintStart_toStartOf="@+id/guideline_izq"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgetpassword"

        android:textColor="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@+id/guideline_dcha"
        app:layout_constraintStart_toStartOf="@+id/guideline_izq"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    <Button
        android:id="@+id/btn_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"

        android:background="@drawable/btn_google_facebook_background"
        android:text="@string/loginGoogle"

        android:gravity="center"
        android:drawableLeft="@drawable/ic_google_icon"
        android:drawablePadding="8dp"

        android:paddingLeft="100dp"
        android:paddingRight="100dp"

        android:textAllCaps="false"
        android:textColor="@color/login_form_details"

        app:layout_constraintEnd_toStartOf="@+id/guideline_dcha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_izq"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"

        android:background="@drawable/btn_google_facebook_background"
        android:text="@string/loginFacebook"

        android:gravity="center"
        android:drawableLeft="@drawable/ic_facebook"
        android:drawablePadding="7dp"

        android:paddingLeft="100dp"
        android:paddingRight="80dp"

        android:textAllCaps="false"
        android:textColor="@color/login_form_details"

        app:layout_constraintEnd_toStartOf="@+id/guideline_dcha"
        app:layout_constraintStart_toStartOf="@+id/guideline_izq"
        app:layout_constraintTop_toBottomOf="@+id/btn_google" />

    <View
        android:id="@+id/login_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#ffffff"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_singup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_registrarse_background"
        android:text="@string/notRegistered"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_separator" />


</androidx.constraintlayout.widget.ConstraintLayout>